--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,3 @@
-
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
@@ -13,7 +12,6 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='res/css/screen.css') }}" media="screen">
         <link rel="stylesheet" href="{{ url_for('static', filename='res/css/print.css') }}" media="print">
 
-	<link rel="alternate" type="application/rss+xml" title="RSS Feed" href="https://www.nayuki.io/rss20.xml"/>
 <style type="text/css">
 article .not {
 	text-decoration: overline;
@@ -44,7 +42,14 @@ article div.table > ul > li > p:first-child {
 </style>
 </head>
 
-<header><h1><a href="/">Star Coder</a></h1><nav id="headnav"><h2>Navigation</h2><ul><li><a href="/posts">Recent </a></li><li><a href="/category/programming">Programming </a></li><li><a href="/category/math">Math </a></li><li><a href="/page/java-se-5-is-the-most-significant-release" title="Page: Java SE 5 is the most significant release">Random </a></li></ul><ul><li><a href="/page/about">About/Contact </a></li><li><a href="https://github.com/melodyyu" onclick="if('ga' in window)ga('send','pageview','https://github.com/melodyyu');">GitHub </a></li></ul></nav></header>
+<header><h1><a href="/">Star Coder</a></h1><nav id="headnav">
+<h2>Navigation</h2>
+<ul>
+<li><a href="/posts">Recent </a></li>
+<li><a href="/category/programming">Programming </a></li>
+<li><a href="/category/math">Math </a></li>
+<li><a href="/page/about">About/Contact </a></li>
+<li><a href="https://github.com/melodyyu" onclick="if('ga' in window)ga('send','pageview','https://github.com/melodyyu');">GitHub </a></li></ul></nav></header>
 <hr/>
 
 
