--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<meta charset="UTF-8"/>
-	<title>Boolean algebra laws</title>
+        <title>{% block title %}{% endblock %}</title>
 	<meta http-equiv="Content-Style-Type" content="text/css"/>
 	<meta http-equiv="Content-Script-Type" content="application/javascript"/>
 	<meta name="viewport" content="width=device-width,initial-scale=1"/>
