--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %} {{post.title}} {% endblock %} 
+
 {% block content %}
 <h1 class="blog-title"> {{post.title}} </h1>
      <div class="entry-thumbnail"></div>
