--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -43,12 +43,13 @@ article div.table > ul > li > p:first-child {
 </head>
 
 <header><h1><a href="/">Star Coder</a></h1><nav id="headnav">
+
 <h2>Navigation</h2>
 <ul>
 <li><a href="/posts">Recent </a></li>
 <li><a href="/category/programming">Programming </a></li>
 <li><a href="/category/math">Math </a></li>
-<li><a href="/page/about">About/Contact </a></li>
+<li><a href="/page/about">About</a></li>
 <li><a href="https://github.com/melodyyu" onclick="if('ga' in window)ga('send','pageview','https://github.com/melodyyu');">GitHub </a></li></ul></nav></header>
 <hr/>
 
