--- a/app/templates/posts.html
+++ b/app/templates/posts.html
@@ -3,16 +3,17 @@
 {% block content %}
 
 <h1>Programming</h1>
-<p>Related categories: <a href="/category/general">General</a>, <a href="/category/math">Math</a><br/>
-Languages: <a href="/category/java">Java</a>, <a href="/category/javascript">JavaScript</a>, <a href="/category/python">Python</a>, <a href="/category/c-cpp">C/C++</a>, <a href="/category/x86">x86 assembly</a><br/>
-Topics: <a href="/category/cryptography">Cryptography</a>, <a href="/category/image-processing">Image processing</a>, <a href="/category/language-critique">Language critique</a></p>
 
+<p>Related categories: 
 
-    <h2>Pages</h2>
+{% for category in categories %} <a href="/category/{{category.name}}">{{category.name}}</a>{{"," if not loop.last }} {% endfor %}
+<br/>
+
+<h2>Pages</h2>
 
 <ul class="pagelinks">
       {% for post in posts %}
-      <li><a href="/view?id={{post.id}}">{{post.title}}</a></li>
+      <li><a href="/page/{{post.slug}}">{{post.title}}</a></li>
       {% endfor %}
 </ul>
    
