--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -51,7 +51,7 @@ article div.table > ul > li > p:first-child {
 <li><a href="/category/math">Math </a></li>
 <li><a href="/category/writing">Writing</a></li>
 <li><a href="/page/about">About</a></li>
-<li><a href="https://github.com/melodyyu" onclick="if('ga' in window)ga('send','pageview','https://github.com/melodyyu');">GitHub </a></li></ul></nav></header>
+</ul></nav></header>
 <hr/>
 
 
