--- a/app/templates/recent.html
+++ b/app/templates/recent.html
@@ -3,6 +3,12 @@
 {% block content %}
 
 <style type="text/css">
+article a {
+	text-decoration: none;
+}
+article a:hover {
+	text-decoration: underline;
+}
 @media(min-width: 600px) {
 	#maintable {
 		display: table;
