--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,6 +48,8 @@ article div.table > ul > li > p:first-child {
 <ul>
 <li><a href="/recent">Recent</a></li>
 <li><a href="/category/programming">Programming</a></li>
+<li><a href="/page/speech-recognition">Speech/Recognition</a></li>
+<li><a href="/page/voice-synthesis">Voice/Synthesis</a></li>
 <li><a href="/category/math">Math </a></li>
 <li><a href="/category/writing">Writing</a></li>
 <li><a href="/page/about">About</a></li>
